--- a/2_simple_csv_rag/requirements.txt
+++ b/2_simple_csv_rag/requirements.txt
@@ -27,6 +27,8 @@ httpx==0.28.1
 httpx-sse==0.4.1
 huggingface-hub==0.34.4
 idna==3.10
+Jinja2==3.1.6
+joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.27
@@ -36,13 +38,17 @@ langchain-google-genai==2.1.10
 langchain-huggingface==0.3.1
 langchain-text-splitters==0.3.11
 langsmith==0.4.23
+MarkupSafe==3.0.2
 marshmallow==3.26.1
+mpmath==1.3.0
 multidict==6.6.4
 mypy_extensions==1.1.0
+networkx==3.5
 numpy==2.3.2
 orjson==3.11.3
 packaging==25.0
 pandas==2.3.2
+pillow==11.3.0
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.32.0
@@ -55,15 +61,25 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
+regex==2025.9.1
 requests==2.32.5
 requests-toolbelt==1.0.0
 rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.7.1
+scipy==1.16.1
+sentence-transformers==5.1.0
+setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.43
+sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tokenizers==0.22.0
+torch==2.8.0
 tqdm==4.67.1
+transformers==4.56.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.15.0
