--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ kubernetes==33.1.0
 langchain==0.3.27
 langchain-community==0.3.29
 langchain-core==0.3.75
+langchain-experimental==0.3.4
 langchain-google-genai==2.1.10
 langchain-huggingface==0.3.1
 langchain-text-splitters==0.3.11
