--- a/requirements.txt
+++ b/requirements.txt
@@ -99,6 +99,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
+rank-bm25==0.2.2
 referencing==0.36.2
 regex==2025.9.1
 requests==2.32.5
